<resources>
    <string name="app_name">ThirThir_Git</string>
    <string name="welcome_slogan">健康喝水不是空談</string>
    <string name="info_statement">水噹噹將為您量身打造最適當的飲水量，需要您的一些小秘密，將會列為系統最高機密，請您放心輸入</string>
    <string name="height">身高：</string>
    <string name="weight">體重：</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="keep_secret">請幫我保密</string>
    <string name="next_time">下次再說喔</string>
    <string name="amount_statement">您可以自由決定每天想要達成的喝水量</string>
    <string name="everyday_amount">每天想喝：</string>
    <string name="ml">ml (c.c.)</string>
    <string name="start">開始喝水</string>
    <string name="recommend_stm">根據您大方分享的秘密，我們推薦您每日所需得喝水量為：</string>
    <string name="today_finished_title">/ 今日的完成水量 /</string>
    <string name="alarm_title">/ 提醒叮噹 /</string>
    <string name="alarm_stm">添加提醒，幫助您順利養成定時喝水習慣</string>
    <string name="insistance_title">/ 堅持計畫 /</string>
    <string name="set">設置</string>
    <string name="insistance_stm">幫您記錄每日喝水狀況，留下您的豐功偉業</string>
    <string name="drink">喝水</string>
    <string name="history">歷史</string>
    <string name="alarm_pagetitle">提醒叮噹</string>
    <string name="frequency_title">/ 每日頻率 /</string>
    <string name="one_timeset">早中晚各一次(9:00,12:00,18:00)</string>
    <string name="two_timeset">早晨與下午重點時段(9:00,15:00)</string>
    <string name="customized_timeset">自定義時段</string>
    <string name="plus">+</string>
    <string name="nightcheck_title">/ 晚點名 /</string>
    <string name="night_check_stm">系統會自動幫您統計，也可以選擇在12點發送通知，或是關機前，讓您再度確認當日總喝水量。</string>
    <string name="turnon">開啟</string>
    <string name="turnoff">關閉</string>
    <string name="remindway_title">/ 提醒方式 /</string>
    <string name="inform">通知</string>
    <string name="system_alarm">系統鬧鈴</string>
    <string name="cancel">取消</string>
    <string name="abandon_question">放棄此次設置嗎</string>
    <string name="your_menu">您的菜單如下</string>
    <string name="frequenct">提醒頻率:</string>
    <string name="remindway">提醒方式:</string>
    <string name="insistance">堅持有效期:</string>
    <string name="colon">：</string>
    <string name="day">天</string>
    <string name="from">從今日起到</string>
    <string name="to">努力喝水吧</string>
    <string name="stop">暫停</string>
    <string name="change">更改</string>
    <string name="end">結束</string>
    <string name="prolong">延長</string>
    <string name="insistance_pagetitle">堅持計畫</string>
    <string name="history_title">/ 我的豐功偉績 /</string>
    <string name="one_week">一週馬拉松</string>
    <string name="one_month">一月馬拉松</string>
    <string name="one_season">一季馬拉松</string>
    <string name="half_year">全程馬拉松</string>
    <string name="one_year">極限馬拉松</string>
    <string name="low_price">參加獎</string>
    <string name="third_price">銅牌獎</string>
    <string name="second_price">銀牌獎</string>
    <string name="first_price">金牌獎</string>
    <string name="final_price">終身成就獎</string>
    <string name="current_process_title">/ 當期進度/</string>
    <string name="share">參加獎</string>
    <string name="report">銅牌獎</string>
    <string name="plan_process">計畫進度</string>
    <string name="average">平均狀況</string>
    <string name="everyday_ratio">每日完成度(%)</string>
    <string name="cc_unit">(c.c.)</string>
    <string name="day_unit">(天)</string>
    <string name="moring">早</string>
    <string name="afternoon">午</string>
    <string name="night">晚</string>
</resources>
