<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:paddingBottom="20dp">
        <!--作為基準-->
        <ImageView
            android:id="@+id/img_mark"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/tv_everyday_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/img_mark"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/everyday_amount"
            android:textSize="35px"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_height"
            android:layout_marginLeft="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="60dp"
            android:layout_marginTop="15dp"
            android:text="@string/cm"
            android:textSize="35px"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_height"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="80dp"/>
    </RelativeLayout>
    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/rl01"
        android:layout_marginBottom="60dp"
        android:text="@string/amount_statement"
        android:textSize="35px"/>
    <Button
        android:id="@+id/btn_start"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@id/rl01"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:text="@string/start"
        android:textSize="30px"
        android:textColor="@color/dark_gray"
        android:background="@drawable/bluecircle_bg"/>

</RelativeLayout>