<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mac.thirthir_git.MainActivity">
    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"/>
    <RelativeLayout
        android:id="@+id/rl01"
        android:layout_width="match_parent"
        android:layout_height="230dp">
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/today_finished_title"
            android:textSize="35px"
            android:textAlignment="center"/>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl01">
        <ImageView
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:background="@drawable/purple_line"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:text="@string/alarm_title"
            android:textSize="35px"
            android:textAlignment="center"/>
        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/whiterec_bg">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:layout_centerVertical="true"/>

        </RelativeLayout>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="215dp"
            android:layout_marginBottom="20dp"
           />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl02">
        <ImageView
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:background="@drawable/purple_line"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:text="@string/insistance_title"
            android:textSize="35px"
            android:textAlignment="center"/>
    </RelativeLayout>



</RelativeLayout>
